Qualification Section completion - Desktop

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </section>
         <!--===== About =====-->
         <section class="abaout section" id="about">
-            <h2 data-heading="My intro" class="section__title">Sobre mim</h2>
+            <h2 data-heading="Introdução " class="section__title">Sobre mim</h2>
 
             <div class="about__container container grid">
                 <img src="./img/aboutImg.jpeg" alt="" class="about__img">
@@ -149,7 +149,60 @@
             </div>
         </section>
         <!--===== Qualification =====-->
-        
+        <section class="qualification section">
+            <h2 data-heading="Minha jornada" class="section__title">Qualificações</h2>
+
+            <div class="qualification__container container grid">
+                <div class="education">
+                    <h3 class="qualification__title">
+                        <i class="uil uil-graduation-cap">Educação</i>
+                    </h3>
+
+                    <div class="timeline">
+                        <div class="timeline__item">
+                            <div class="circle__dot"></div>
+                            <h3 class="timeline__title">Universidade Descomplica</h3>
+                            <p class="timeline__text">Análise e Desenvolvimento de Sistemas</p>
+                            <span class="timeline__date"><i class="uil uil-calender-alt"></i>
+                            2022 - Present
+                            </span>
+                        </div>
+
+                        <div class="timeline__item">
+                            <div class="circle__dot"></div>
+                            <h3 class="timeline__title">Udemy</h3>
+                            <p class="timeline__text">Java - Orientação a Objet</p>
+                            <span class="timeline__date"><i class="uil uil-calender-alt"></i>
+                            2021 - 2021
+                            </span>
+                        </div>
+
+                        <div class="timeline__item">
+                            <div class="circle__dot"></div>
+                            <h3 class="timeline__title">Curso em vídeo</h3>
+                            <p class="timeline__text">Algoritmos</p>
+                            <span class="timeline__date"><i class="uil uil-calender-alt"></i>
+                            2021 - 2021
+                            </span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="experience">
+                    <h3 class="qualification__title">Experiência</h3>
+                    <div class="timeline">
+                        <div class="timeline__item">
+                            <div class="circle__dot"></div>
+                            <h3 class="timeline__title"></h3> Rizzo
+                            <p class="timeline__text"></p>Auxiliar de e-commerce
+                            <span class="timeline__date"><i class="uil uil-calender-alt"></i>
+                            2024 - Presente
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!--===== Skills =====-->
         
         <!--===== Work =====-->
