Breakingpoint - large device

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 </head>
 <body>
     <!--======== SIDEBAR ======== -->
+    <div class="nav__toggle" id="nav-toggle">
+        <i class="uil uil-bars"></i>
+    </div>
     <aside class="sidebar" id="sidebar">
         <nav class="nav">
             <div class="nav__logo">
@@ -49,6 +52,10 @@
             <div class="btn__share">
                 <i class="uil uil-share-alt social__share"></i>
             </div>
+
+            <div class="nav__close" id="nav-close">
+                <i class="uil uil-times"></i>
+            </div>
         </nav>
     </aside>
     <!--======== MAIN ======== -->
@@ -71,7 +78,7 @@
                     </div>
                 </div>
 
-                <img src="./img/home-img.png" alt="" class="home__img">
+                <img src="./img/eu-removebg-preview.png" alt="" class="home__img">
             
                 <div class="home__data">
                     <h1 class="home__title">Olá,eu sou o henrique</h1>
